# web-visual-agent-experiment

./: .gitignore  agent.ipynb  docker-compose.yml  embedding.ipynb  llm_test.ipynb  markup.ipynb  pyproject.toml  test.ipynb  x.py
.githooks/: pre-commit
notebooks/: cluster.ipynb  markup.ipynb  ocr.ipynb
tests/: test_prompt.py  test_run.py
tests/browser/: test_markup.py
tests/browser/view/: __init__.py  page.html  test_markup.py
vinsurf/: __init__.py  main.py
vinsurf/agents/: analyze.py  prompts.py  surfer_multistep.py  surfer_rag.py  surfer_vision.py
vinsurf/agents/task/: planner.py
vinsurf/browser/: __init__.py  browser.py  cluster.py  dataset.py  embedding.py  markup.py  page.py  selector.py  view.py
vinsurf/browser/utils/: __init__.py  draw.py  geometry.py  image.py  torch.py  traverse.py  web_element.py
vinsurf/browser/vectors/: __init__.py  elements.py
vinsurf/browser/view/: __init__.py  extract.py  markup.py  utils.py
vinsurf/vector/: __init__.py
