[project]
name = "vinsurf"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "arize-phoenix-client>=1.21.0",
    "arize-phoenix[otel]>=12.8.0",
    "datasets>=4.2.0",
    "faiss-cpu>=1.12.0",
    "langgraph>=1.0.0",
    "loguru>=0.7.3",
    "ollama>=0.6.0",
    "openai>=2.5.0",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "python-decouple>=3.8",
    "qdrant-client>=1.15.1",
    "selenium>=4.37.0",
    "seleniumbase>=4.43.3",
    "shapely>=2.1.2",
    "transformers[torch]>=4.57.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.ruff]
target-version = "py311"
line-length = 79

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "C4",
    "DTZ",
    "T10",
    "ICN",
    "INP",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "TRY",
    "RUF",
]
ignore = [
    "ANN002",
    "ANN003",
    "D107",
    "FBT001",
    "D203",
    "D213",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
files = ["vinsurf", "tests"]
ignore_missing_imports = true
exclude = [
    '(^|/)__pycache__/',
    '^vinsurf/agents/surfer_multistep\.py$',
    '^vinsurf/agents/surfer_rag\.py$',
    '^vinsurf/agents/surfer_vision\.py$',
]
